--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 # https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
 # example:
-    *         @adit-sinha @snp05016 @mehaksahjwani @snoopyygeeek @Shrav1028 @junaid574
+    *         @adit-sinha @snp05016 @mehaksahjwani @snoopyygeek @Shrav1028 @junaid574
