--- a/code/MoodSync/gradle/libs.versions.toml
+++ b/code/MoodSync/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.8.2"
+firebaseBom = "33.10.0"
+firebaseFirestore = "25.1.2"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -13,9 +15,15 @@ navigationUi = "2.8.7"
 #=======
 firebaseDatabase = "21.0.0"
 firebaseStorage = "21.0.1"
+recyclerview = "1.4.0"
 #>>>>>>> 4bd71cf3063b87d4c82a733ba25a686acb787892
 
 [libraries]
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-firestore = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestore" }
+google-firebase-database = { module = "com.google.firebase:firebase-database" }
+google-firebase-storage = { module = "com.google.firebase:firebase-storage" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -29,6 +37,7 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 #=======
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
+recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 #>>>>>>> 4bd71cf3063b87d4c82a733ba25a686acb787892
 
 [plugins]
