--- a/code/MoodSync/app/src/main/AndroidManifest.xml
+++ b/code/MoodSync/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="MediaStore.ACTION_IMAGE_CAPTURE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
