--- a/code/MoodSync/gradle/libs.versions.toml
+++ b/code/MoodSync/gradle/libs.versions.toml
@@ -1,7 +1,10 @@
 [versions]
 agp = "8.8.2"
+compiler = "4.12.0"
 firebaseBom = "33.10.0"
 firebaseFirestore = "25.1.2"
+firebaseFirestoreVersion = "25.1.1"
+glide = "4.12.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -16,12 +19,19 @@ navigationUi = "2.8.7"
 firebaseDatabase = "21.0.0"
 firebaseStorage = "21.0.1"
 recyclerview = "1.4.0"
+recyclerviewVersion = "1.3.2"
 #>>>>>>> 4bd71cf3063b87d4c82a733ba25a686acb787892
 
 [libraries]
+com-google-firebase-firebase-database = { module = "com.google.firebase:firebase-database" }
+com-google-firebase-firebase-storage = { module = "com.google.firebase:firebase-storage" }
+compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestore = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestore" }
+firebase-firestore-v2511 = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestoreVersion" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 google-firebase-database = { module = "com.google.firebase:firebase-database" }
 google-firebase-storage = { module = "com.google.firebase:firebase-storage" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -38,6 +48,7 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
+recyclerview-v132 = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerviewVersion" }
 #>>>>>>> 4bd71cf3063b87d4c82a733ba25a686acb787892
 
 [plugins]
