--- a/code/MoodSync/gradle/libs.versions.toml
+++ b/code/MoodSync/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ recyclerviewVersion = "1.3.2"
 googleAndroidLibrariesMapsplatformSecretsGradlePlugin = "2.0.1"
 playServicesMaps = "19.1.0"
 playServicesLocation = "21.3.0"
+espressoContrib = "3.6.1"
 #>>>>>>> 4bd71cf3063b87d4c82a733ba25a686acb787892
 
 [libraries]
@@ -58,6 +59,7 @@ recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "r
 recyclerview-v132 = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerviewVersion" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+androidx-espresso-contrib = { group = "androidx.test.espresso", name = "espresso-contrib", version.ref = "espressoContrib" }
 #>>>>>>> 4bd71cf3063b87d4c82a733ba25a686acb787892
 
 [plugins]
